--- a/webseries.html
+++ b/webseries.html
@@ -4,7 +4,7 @@
 </head>
 <body style="background-color:black;">
 <body>
-<a class="nav-link" href="./webseries/Never have i ever S4.html"><p style><strong>Never have i ever S4</strong></p></a>
+<a class="nav-link" href="./web series/english/Never Have I Ever/Never have i ever S4.html"><p style><strong>Never have i ever S4</strong></p></a>
 <a class="nav-link" href=".html"><p style><strong></strong></p></a>
 <a class="nav-link" href=".html"><p style><strong></strong></p></a>
 
