--- a/web series/english/Never Have I Ever/Never have i ever S4.html
+++ b/web series/english/Never Have I Ever/Never have i ever S4.html
@@ -7,34 +7,34 @@
 <p style><strong>Never Have I Ever</strong></p>
 
 
-<button onclick="window.location.href='NHIE S4/Ep1.html'">
+<button onclick="window.location.href='NHIE S4/ep1.html'">
       Ep 01
 </button>
-<button onclick="window.location.href='NHIE S4/Ep2.html'">
+<button onclick="window.location.href='NHIE S4/ep2.html'">
       Ep 02
 </button>
-<button onclick="window.location.href='NHIE S4/Ep3.html'">
+<button onclick="window.location.href='NHIE S4/ep3.html'">
       Ep 03
 </button>
-<button onclick="window.location.href='NHIE S4/Ep4.html'">
+<button onclick="window.location.href='NHIE S4/ep4.html'">
       Ep 04
 </button>
-<button onclick="window.location.href='NHIE S4/Ep5.html'">
+<button onclick="window.location.href='NHIE S4/ep5.html'">
       Ep 05
 </button>
-<button onclick="window.location.href='NHIE S4/Ep6.html'">
+<button onclick="window.location.href='NHIE S4/ep6.html'">
       Ep 06
 </button>
-<button onclick="window.location.href='NHIE S4/Ep7.html'">
+<button onclick="window.location.href='NHIE S4/ep7.html'">
       Ep 07
 </button>
-<button onclick="window.location.href='NHIE S4/Ep8.html'">
+<button onclick="window.location.href='NHIE S4/ep8.html'">
       Ep 08
 </button>
-<button onclick="window.location.href='NHIE S4/Ep9.html'">
+<button onclick="window.location.href='NHIE S4/ep9.html'">
       Ep 09
 </button>
-<button onclick="window.location.href='NHIE S4/Ep10.html'">
+<button onclick="window.location.href='NHIE S4/ep10.html'">
       Ep 10
 </button>
 
