--- a/anime/Devilman Crybaby.html
+++ b/anime/Devilman Crybaby.html
@@ -1,35 +1,44 @@
 <html>
 <head>
-<link rel="stylesheet" href= "./Resources/css/style.css">
+<link rel="stylesheet" href="./Resources/css/style.css">
 </head>
 <body style="background-color:black;">
-<body>
 
-<p style><strong>Devilman Crybaby</strong></p>
+<p style=""><strong>Devilman Crybaby</strong></p>
 
-<p style><strong>EP 1</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/IRfw-VUeZ" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 2</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/f3fHC8VMZ" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 3</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/RkXjwfDdd" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 4</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/y8ZJ311Kz" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 5</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/fyqAnnBVA" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 6</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/1XAFQtdrn" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 7</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/NwB-zKpTt" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 8</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/3Dr1O9E6M" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 9</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/w8C4aMLN-i" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 10</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/lhwGBBztC" frameborder="0" scrolling="0" allowfullscreen></iframe>
-</head>
+<button onclick="window.location.href='Devilman/Ep0.html'">
+      Ep 00
+</button>
+<button onclick="window.location.href='Devilman/Ep1.html'">
+      Ep 01
+</button>
+<button onclick="window.location.href='Devilman/Ep2.html'">
+      Ep 02
+</button>
+<button onclick="window.location.href='Devilman/Ep3.html'">
+      Ep 03
+</button>
+<button onclick="window.location.href='Devilman/Ep4.html'">
+      Ep 04
+</button>
+<button onclick="window.location.href='Devilman/Ep5.html'">
+      Ep 05
+</button>
+<button onclick="window.location.href='Devilman/Ep6.html'">
+      Ep 06
+</button>
+<button onclick="window.location.href='Devilman/Ep7.html'">
+      Ep 07
+</button>
+<button onclick="window.location.href='Devilman/Ep8.html'">
+      Ep 08
+</button>
+<button onclick="window.location.href='Devilman/Ep9.html'">
+      Ep 09
+</button>
+<button onclick="window.location.href='Devilman/Ep10.html'">
+      Ep 10
+</button>
+
 </body>
-
-
-
-
+</html>
