--- a/anime/hotd.html
+++ b/anime/hotd.html
@@ -7,40 +7,40 @@
 
 <p style="color:white;"><strong>Highschool of the Dead</strong></p>
 
-<button onclick="window.location.href='./hotd/EP1.html'">
+<button onclick="window.location.href='./hotd/Ep1.html'">
       EP 1
 </button>
-<button onclick="window.location.href='./hotd/EP2.html'">
+<button onclick="window.location.href='./hotd/Ep2.html'">
       EP 2
 </button>
-<button onclick="window.location.href='./hotd/EP3.html'">
+<button onclick="window.location.href='./hotd/Ep3.html'">
       EP 3
 </button>
-<button onclick="window.location.href='./hotd/EP4.html'">
+<button onclick="window.location.href='./hotd/Ep4.html'">
       EP 4
 </button>
-<button onclick="window.location.href='./hotd/EP5.html'">
+<button onclick="window.location.href='./hotd/Ep5.html'">
       EP 5
 </button>
-<button onclick="window.location.href='./hotd/EP6.html'">
+<button onclick="window.location.href='./hotd/Ep6.html'">
       EP 6
 </button>
-<button onclick="window.location.href='./hotd/EP7.html'">
+<button onclick="window.location.href='./hotd/Ep7.html'">
       EP 7
 </button>
-<button onclick="window.location.href='./hotd/EP8.html'">
+<button onclick="window.location.href='./hotd/Ep8.html'">
       EP 8
 </button>
-<button onclick="window.location.href='./hotd/EP9.html'">
+<button onclick="window.location.href='./hotd/Ep9.html'">
       EP 9
 </button>
-<button onclick="window.location.href='./hotd/EP10.html'">
+<button onclick="window.location.href='./hotd/Ep10.html'">
       EP 10
 </button>
-<button onclick="window.location.href='./hotd/EP11.html'">
+<button onclick="window.location.href='./hotd/Ep11.html'">
       EP 11
 </button>
-<button onclick="window.location.href='./hotd/EP12.html'">
+<button onclick="window.location.href='./hotd/Ep12.html'">
       EP 12
 </button>
 <button onclick="window.location.href='./hotd/OVA.html'">
