--- a/anime/Highschool of the Dead.html
+++ b/anime/Highschool of the Dead.html
@@ -1,38 +1,50 @@
 <html>
 <head>
-<link rel="stylesheet" href= "./Resources/css/style.css">
+    <link rel="stylesheet" href="./Resources/css/style.css">
 </head>
 <body style="background-color:black;">
-<body>
 
-<p style><strong>Highschool of the Dead</strong></p>
+<p style="color:white;"><strong>Highschool of the Dead</strong></p>
 
-<p style><strong>EP 1</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/5shfRm-E8" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 2</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/7WSxBh8Nx" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 3</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/O5cAjxBFH" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 4</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/1j2FIOEIm" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 5</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/CFZwo-wJ-" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 6</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/2zTVkv1R0" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 7</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/qBE4X59Sy" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 8</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/jV6DRclzO" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 9</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/aW-4aZBXB" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 10</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/XNn78BwH8" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 11</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/VsyZ1D0bQ" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 12</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/YFGVR5UWs" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>OVA</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/gFO-M7wYg" frameborder="0" scrolling="0" allowfullscreen></iframe>
+<button onclick="window.location.href='./hotd/Ep1.html'">
+      EP 1
+</button>
+<button onclick="window.location.href='./hotd/Ep2.html'">
+      EP 2
+</button>
+<button onclick="window.location.href='./hotd/Ep3.html'">
+      EP 3
+</button>
+<button onclick="window.location.href='./hotd/Ep4.html'">
+      EP 4
+</button>
+<button onclick="window.location.href='./hotd/Ep5.html'">
+      EP 5
+</button>
+<button onclick="window.location.href='./hotd/Ep6.html'">
+      EP 6
+</button>
+<button onclick="window.location.href='./hotd/Ep7.html'">
+      EP 7
+</button>
+<button onclick="window.location.href='./hotd/Ep8.html'">
+      EP 8
+</button>
+<button onclick="window.location.href='./hotd/Ep9.html'">
+      EP 9
+</button>
+<button onclick="window.location.href='./hotd/Ep10.html'">
+      EP 10
+</button>
+<button onclick="window.location.href='./hotd/Ep11.html'">
+      EP 11
+</button>
+<button onclick="window.location.href='./hotd/Ep12.html'">
+      EP 12
+</button>
+<button onclick="window.location.href='./hotd/OVA.html'">
+      OVA
+</button>
 
-</head>
 </body>
+</html>
