--- a/anime.html
+++ b/anime.html
@@ -11,7 +11,7 @@
 <a class="nav-link" href="./anime/Jujutsu Kaisen.html"><p style><strong>Jujutsu Kaisen</strong></p></a>
 <a class="nav-link" href="./anime/Devilman Crybaby.html"><p style><strong>Devilman Crybaby</strong></p></a>
 <a class="nav-link" href="./anime/My Dress-Up Darling.html"><p style><strong>My Dress-Up Darling</strong></p></a>
-<a class="nav-link" href="./anime/hotd.html"><p style><strong>hotd</strong></p></a>
+<a class="nav-link" href="./anime/hot.html"><p style><strong>hot</strong></p></a>
 <a class="nav-link" href=".html"><p style><strong></strong></p></a>
 
 
