--- a/anime/hot.html
+++ b/anime/hot.html
@@ -25,7 +25,7 @@
         }
 
         button {
-            background-color: #444;
+            background-color: #007BFF; /* Blue */
             color: white;
             border: none;
             padding: 15px 30px;
@@ -33,15 +33,16 @@
             cursor: pointer;
             font-size: 18px;
             transition: background-color 0.3s, transform 0.3s;
+            border-radius: 5px;
         }
 
         button:hover {
-            background-color: #666;
+            background-color: #0056b3; /* Darker blue */
             transform: scale(1.05);
         }
 
         button:active {
-            background-color: #222;
+            background-color: #003f7f; /* Even darker blue */
         }
     </style>
 </head>
