--- a/anime/hot.html
+++ b/anime/hot.html
@@ -25,7 +25,7 @@
         }
 
         button {
-            background-color: #007BFF; /* Blue */
+            background-color: #960019; /* Blue */
             color: white;
             border: none;
             padding: 15px 30px;
@@ -37,8 +37,8 @@
         }
 
         button:hover {
-            background-color: #0056b3; /* Darker blue */
-            transform: scale(1.05);
+            background-color: #7C0A02; /* Darker blue */
+            transform: scale(1.5);
         }
 
         button:active {
