--- a/anime/hot.html
+++ b/anime/hot.html
@@ -47,6 +47,8 @@
     </style>
 </head>
 <body>
+    <link rel="stylesheet" href= "./Resources/css/style.css">
+
     <p style><strong>Highschool of the Dead</strong></p>
 
     <div class="button-container">
