--- a/anime/hot.html
+++ b/anime/hot.html
@@ -25,7 +25,7 @@
         }
 
         button {
-            background-color: #960019; /* Blue */
+            background-color: #960019; 
             color: white;
             border: none;
             padding: 15px 30px;
@@ -37,18 +37,18 @@
         }
 
         button:hover {
-            background-color: #7C0A02; /* Darker blue */
-            transform: scale(5);
+            background-color: #7C0A02; 
+            transform: scale(2);
         }
 
         button:active {
-            background-color: #003f7f; /* Even darker blue */
+            background-color: #003f7f; 
         }
     </style>
 </head>
 <body>
     <link rel="stylesheet" href= "./Resources/css/style.css">
-
+    <style>
     <p style><strong>Highschool of the Dead</strong></p>
 
     <div class="button-container">
@@ -66,5 +66,6 @@
         <button onclick="window.location.href='./hotd/Ep12.html'">Ep 12</button>
         <button onclick="window.location.href='./hotd/OVA.html'">OVA</button>
     </div>
+    </style>
 </body>
 </html>
