--- a/anime/hot.html
+++ b/anime/hot.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <p class="title><strong>Highschool of the Dead</strong></p>
+    <p class><strong>Highschool of the Dead</strong></p>
 
     <div class="button-container">
         <button onclick="window.location.href='./hotd/Ep1.html'">Ep 1</button>
