--- a/anime/Devilman Crybaby.html
+++ b/anime/Devilman Crybaby.html
@@ -1,41 +1,66 @@
+<!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="./Resources/css/style.css">
+    <link rel="stylesheet" href="./Resources/css/style.css">
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        p {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        button {
+            background-color: #960019; 
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            margin: 10px;
+            cursor: pointer;
+            font-size: 18px;
+            transition: background-color 0.3s, transform 0.3s;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #7C0A02; 
+            transform: scale(2);
+        }
+
+        button:active {
+            background-color: #003f7f; 
+        }
+    </style>
 </head>
-<body style="background-color:black;">
+<body>
+    <p><strong>Highschool of the Dead</strong></p>
 
-<p style=""><strong>Devilman Crybaby</strong></p>
-
-<button onclick="window.location.href='Devilman/Ep1.html'">
-      Ep 01
-</button>
-<button onclick="window.location.href='Devilman/Ep2.html'">
-      Ep 02
-</button>
-<button onclick="window.location.href='Devilman/Ep3.html'">
-      Ep 03
-</button>
-<button onclick="window.location.href='Devilman/Ep4.html'">
-      Ep 04
-</button>
-<button onclick="window.location.href='Devilman/Ep5.html'">
-      Ep 05
-</button>
-<button onclick="window.location.href='Devilman/Ep6.html'">
-      Ep 06
-</button>
-<button onclick="window.location.href='Devilman/Ep7.html'">
-      Ep 07
-</button>
-<button onclick="window.location.href='Devilman/Ep8.html'">
-      Ep 08
-</button>
-<button onclick="window.location.href='Devilman/Ep9.html'">
-      Ep 09
-</button>
-<button onclick="window.location.href='Devilman/Ep10.html'">
-      Ep 10
-</button>
+    <div class="button-container">
+        <button onclick="window.location.href='./Devilman/Ep1.html'">Ep 1</button>
+        <button onclick="window.location.href='./Devilman/Ep2.html'">Ep 2</button>
+        <button onclick="window.location.href='./Devilman/Ep3.html'">Ep 3</button>
+        <button onclick="window.location.href='./Devilman/Ep4.html'">Ep 4</button>
+        <button onclick="window.location.href='./Devilman/Ep5.html'">Ep 5</button>
+        <button onclick="window.location.href='./Devilman/Ep6.html'">Ep 6</button>
+        <button onclick="window.location.href='./Devilman/Ep7.html'">Ep 7</button>
+        <button onclick="window.location.href='./Devilman/Ep8.html'">Ep 8</button>
+        <button onclick="window.location.href='./Devilman/Ep9.html'">Ep 9</button>
+        <button onclick="window.location.href='./Devilman/Ep10.html'">Ep 10</button>
+    </div>
 
 </body>
 </html>
