--- a/anime/Devilman Crybaby.html
+++ b/anime/Devilman Crybaby.html
@@ -47,7 +47,7 @@
     </style>
 </head>
 <body>
-    <p><strong>Highschool of the Dead</strong></p>
+    <p><strong>Devilman Crybaby</strong></p>
 
     <div class="button-container">
         <button onclick="window.location.href='./Devilman/Ep1.html'">Ep 1</button>
