--- a/anime/hot.html
+++ b/anime/hot.html
@@ -13,8 +13,11 @@
         }
 
         p {
-            font-size: 24px;
+            font-size: 36px;
             font-weight: bold;
+            color: #FF4500; /* Orange-Red */
+            text-shadow: 2px 2px 4px #000000; /* Black shadow for better readability */
+            margin: 20px 0;
         }
 
         .button-container {
@@ -25,7 +28,7 @@
         }
 
         button {
-            background-color: #960019; 
+            background-color: #007BFF; /* Blue */
             color: white;
             border: none;
             padding: 15px 30px;
@@ -37,33 +40,30 @@
         }
 
         button:hover {
-            background-color: #7C0A02; 
-            transform: scale(2);
+            background-color: #0056b3; /* Darker blue */
+            transform: scale(1.05);
         }
 
         button:active {
-            background-color: #003f7f; 
+            background-color: #003f7f; /* Even darker blue */
         }
     </style>
 </head>
 <body>
-    <p><strong>Highschool of the Dead</strong></p>
+    <p class="title"><strong>World's End Harem</strong></p>
 
     <div class="button-container">
-        <button onclick="window.location.href='./hotd/Ep1.html'">Ep 1</button>
-        <button onclick="window.location.href='./hotd/Ep2.html'">Ep 2</button>
-        <button onclick="window.location.href='./hotd/Ep3.html'">Ep 3</button>
-        <button onclick="window.location.href='./hotd/Ep4.html'">Ep 4</button>
-        <button onclick="window.location.href='./hotd/Ep5.html'">Ep 5</button>
-        <button onclick="window.location.href='./hotd/Ep6.html'">Ep 6</button>
-        <button onclick="window.location.href='./hotd/Ep7.html'">Ep 7</button>
-        <button onclick="window.location.href='./hotd/Ep8.html'">Ep 8</button>
-        <button onclick="window.location.href='./hotd/Ep9.html'">Ep 9</button>
-        <button onclick="window.location.href='./hotd/Ep10.html'">Ep 10</button>
-        <button onclick="window.location.href='./hotd/Ep11.html'">Ep 11</button>
-        <button onclick="window.location.href='./hotd/Ep12.html'">Ep 12</button>
-        <button onclick="window.location.href='./hotd/OVA.html'">OVA</button>
+        <button onclick="window.location.href='./weh/Ep1.html'">Ep 1</button>
+        <button onclick="window.location.href='./weh/Ep2.html'">Ep 2</button>
+        <button onclick="window.location.href='./weh/Ep3.html'">Ep 3</button>
+        <button onclick="window.location.href='./weh/Ep4.html'">Ep 4</button>
+        <button onclick="window.location.href='./weh/Ep5.html'">Ep 5</button>
+        <button onclick="window.location.href='./weh/Ep6.html'">Ep 6</button>
+        <button onclick="window.location.href='./weh/Ep7.html'">Ep 7</button>
+        <button onclick="window.location.href='./weh/Ep8.html'">Ep 8</button>
+        <button onclick="window.location.href='./weh/Ep9.html'">Ep 9</button>
+        <button onclick="window.location.href='./weh/Ep10.html'">Ep 10</button>
+        <button onclick="window.location.href='./weh/Ep11.html'">Ep 11</button>
     </div>
-
 </body>
 </html>
