--- a/anime/World's End Harem.html
+++ b/anime/World's End Harem.html
@@ -1,43 +1,69 @@
+<!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href= "./Resources/css/style.css">
+    <link rel="stylesheet" href="./Resources/css/style.css">
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        p {
+            font-size: 36px;
+            font-weight: bold;
+            color: #ffffff; 
+            text-shadow: 2px 2px 4px #000000; /* Black shadow for better readability */
+            margin: 20px 0;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        button {
+            background-color: #960019; /* Dark red */
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            margin: 10px;
+            cursor: pointer;
+            font-size: 18px;
+            transition: background-color 0.3s, transform 0.3s;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #7C0A02; /* Darker red */
+            transform: scale(2);
+        }
+
+        button:active {
+            background-color: #00591A; /* Even darker red */
+        }
+    </style>
 </head>
-<body style="background-color:black;">
 <body>
+    <p class="title"><strong>World's End Harem</strong></p>
 
-<p style><strong>World's End Harem</strong></p>
-
-<p style><strong>EP 1</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/NjYYNX-4qw" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 2</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/DXRFac86l" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 3</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/TJc4ss5u8" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 4</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/9DNLHBaD0" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 5</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/FkvSRfabS" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 6</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/D7FfXrfFR" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 7</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/RQoQrgnKg" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 8</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/5M8N21xcdk" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 9</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/iZ9XGcbbz" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 10</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/uo5WrrZd8" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 11</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/0vvPNXWpc" frameborder="0" scrolling="0" allowfullscreen></iframe>
-
-
-
-
-
-
-
-
-
-
-</head>
+    <div class="button-container">
+        <button onclick="window.location.href='./weh/Ep1.html'">Ep 1</button>
+        <button onclick="window.location.href='./weh/Ep2.html'">Ep 2</button>
+        <button onclick="window.location.href='./weh/Ep3.html'">Ep 3</button>
+        <button onclick="window.location.href='./weh/Ep4.html'">Ep 4</button>
+        <button onclick="window.location.href='./weh/Ep5.html'">Ep 5</button>
+        <button onclick="window.location.href='./weh/Ep6.html'">Ep 6</button>
+        <button onclick="window.location.href='./weh/Ep7.html'">Ep 7</button>
+        <button onclick="window.location.href='./weh/Ep8.html'">Ep 8</button>
+        <button onclick="window.location.href='./weh/Ep9.html'">Ep 9</button>
+        <button onclick="window.location.href='./weh/Ep10.html'">Ep 10</button>
+        <button onclick="window.location.href='./weh/Ep11.html'">Ep 11</button>
+    </div>
 </body>
+</html>
