--- a/anime/Jujutsu Kaisen.html
+++ b/anime/Jujutsu Kaisen.html
@@ -1,59 +1,82 @@
+<!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href= "./Resources/css/style.css">
+    <link rel="stylesheet" href="./Resources/css/style.css">
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        p {
+            font-size: 36px;
+            font-weight: bold;
+            color: #FF4500; /* Orange-Red */
+            text-shadow: 2px 2px 4px #000000; /* Black shadow for better readability */
+            margin: 20px 0;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        button {
+            background-color: #007BFF; /* Blue */
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            margin: 10px;
+            cursor: pointer;
+            font-size: 18px;
+            transition: background-color 0.3s, transform 0.3s;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: #0056b3; /* Darker blue */
+            transform: scale(1.05);
+        }
+
+        button:active {
+            background-color: #003f7f; /* Even darker blue */
+        }
+    </style>
 </head>
-<body style="background-color:black;">
 <body>
+    <p class="title"><strong>Jujutsu Kaisen</strong></p>
 
-<p style><strong>Jujutsu Kaisen</strong></p>
-
-<p style><strong>EP 1</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/lW-B0_ILJ" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 2</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/2i9LsDmOW" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 3</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/7ZNNaTS00" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 4</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/ZMGekePQp" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 5</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/UzWgtvqt0x" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 6</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/hhc198HG5" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 7</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/U3lyrX4Q_" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 8</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/pGZayWyLT" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 9</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/Zbi_JYreC" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 10</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/0JFCXZeqY" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 11</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/vqPZ6JHLs" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 12</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/5pAVhSU52" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 13</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/_PIxJrgd3" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 14</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/yct7ZxA6A" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 15</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/F58q5ty_1" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 16</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/PKkWdvwd3" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 17</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/BO1zY_Gj4" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 18</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/14YlB6n6b" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 19</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/VW8XBcA0R" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 20</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/CXKbQfWcI" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 21</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/Iwz94PyCy" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 22</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/0SPEo1BkO" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 23</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/CV5evwISo" frameborder="0" scrolling="0" allowfullscreen></iframe>
-<p style><strong>EP 24</strong></p>
-<iframe width="100%" height="100%" src="https://short.ink/yaX0ih_XC" frameborder="0" scrolling="0" allowfullscreen></iframe>
-</head>
+    <div class="button-container">
+        <button onclick="window.location.href='./jjk/Ep1.html'">Ep 1</button>
+        <button onclick="window.location.href='./jjk/Ep2.html'">Ep 2</button>
+        <button onclick="window.location.href='./jjk/Ep3.html'">Ep 3</button>
+        <button onclick="window.location.href='./jjk/Ep4.html'">Ep 4</button>
+        <button onclick="window.location.href='./jjk/Ep5.html'">Ep 5</button>
+        <button onclick="window.location.href='./jjk/Ep6.html'">Ep 6</button>
+        <button onclick="window.location.href='./jjk/Ep7.html'">Ep 7</button>
+        <button onclick="window.location.href='./jjk/Ep8.html'">Ep 8</button>
+        <button onclick="window.location.href='./jjk/Ep9.html'">Ep 9</button>
+        <button onclick="window.location.href='./jjk/Ep10.html'">Ep 10</button>
+        <button onclick="window.location.href='./jjk/Ep11.html'">Ep 11</button>
+        <button onclick="window.location.href='./jjk/Ep12.html'">Ep 12</button>
+        <button onclick="window.location.href='./jjk/Ep13.html'">Ep 13</button>
+        <button onclick="window.location.href='./jjk/Ep14.html'">Ep 14</button>
+        <button onclick="window.location.href='./jjk/Ep15.html'">Ep 15</button>
+        <button onclick="window.location.href='./jjk/Ep16.html'">Ep 16</button>
+        <button onclick="window.location.href='./jjk/Ep17.html'">Ep 17</button>
+        <button onclick="window.location.href='./jjk/Ep18.html'">Ep 18</button>
+        <button onclick="window.location.href='./jjk/Ep19.html'">Ep 19</button>
+        <button onclick="window.location.href='./jjk/Ep20.html'">Ep 20</button>
+        <button onclick="window.location.href='./jjk/Ep21.html'">Ep 21</button>
+        <button onclick="window.location.href='./jjk/Ep22.html'">Ep 22</button>
+        <button onclick="window.location.href='./jjk/Ep23.html'">Ep 23</button>
+        <button onclick="window.location.href='./jjk/Ep24.html'">Ep 24</button>
+    </div>
 </body>
+</html>
