--- a/anime/Jujutsu Kaisen.html
+++ b/anime/Jujutsu Kaisen.html
@@ -15,7 +15,7 @@
         p {
             font-size: 36px;
             font-weight: bold;
-            color: #FF4500; /* Orange-Red */
+            color: #ffffff; /* Orange-Red */
             text-shadow: 2px 2px 4px #000000; /* Black shadow for better readability */
             margin: 20px 0;
         }
@@ -28,7 +28,7 @@
         }
 
         button {
-            background-color: #007BFF; /* Blue */
+            background-color: #960019; /* Dark red */
             color: white;
             border: none;
             padding: 15px 30px;
@@ -40,12 +40,12 @@
         }
 
         button:hover {
-            background-color: #0056b3; /* Darker blue */
-            transform: scale(1.05);
+            background-color: #7C0A02; /* Darker red */
+            transform: scale(2);
         }
 
         button:active {
-            background-color: #003f7f; /* Even darker blue */
+            background-color: #00591A; /* Even darker red */
         }
     </style>
 </head>
