--- a/anime/Jujutsu Kaisen.html
+++ b/anime/Jujutsu Kaisen.html
@@ -53,30 +53,8 @@
     <p class="title"><strong>Jujutsu Kaisen</strong></p>
 
     <div class="button-container">
-        <button onclick="window.location.href='./jjk/Ep1.html'">Ep 1</button>
-        <button onclick="window.location.href='./jjk/Ep2.html'">Ep 2</button>
-        <button onclick="window.location.href='./jjk/Ep3.html'">Ep 3</button>
-        <button onclick="window.location.href='./jjk/Ep4.html'">Ep 4</button>
-        <button onclick="window.location.href='./jjk/Ep5.html'">Ep 5</button>
-        <button onclick="window.location.href='./jjk/Ep6.html'">Ep 6</button>
-        <button onclick="window.location.href='./jjk/Ep7.html'">Ep 7</button>
-        <button onclick="window.location.href='./jjk/Ep8.html'">Ep 8</button>
-        <button onclick="window.location.href='./jjk/Ep9.html'">Ep 9</button>
-        <button onclick="window.location.href='./jjk/Ep10.html'">Ep 10</button>
-        <button onclick="window.location.href='./jjk/Ep11.html'">Ep 11</button>
-        <button onclick="window.location.href='./jjk/Ep12.html'">Ep 12</button>
-        <button onclick="window.location.href='./jjk/Ep13.html'">Ep 13</button>
-        <button onclick="window.location.href='./jjk/Ep14.html'">Ep 14</button>
-        <button onclick="window.location.href='./jjk/Ep15.html'">Ep 15</button>
-        <button onclick="window.location.href='./jjk/Ep16.html'">Ep 16</button>
-        <button onclick="window.location.href='./jjk/Ep17.html'">Ep 17</button>
-        <button onclick="window.location.href='./jjk/Ep18.html'">Ep 18</button>
-        <button onclick="window.location.href='./jjk/Ep19.html'">Ep 19</button>
-        <button onclick="window.location.href='./jjk/Ep20.html'">Ep 20</button>
-        <button onclick="window.location.href='./jjk/Ep21.html'">Ep 21</button>
-        <button onclick="window.location.href='./jjk/Ep22.html'">Ep 22</button>
-        <button onclick="window.location.href='./jjk/Ep23.html'">Ep 23</button>
-        <button onclick="window.location.href='./jjk/Ep24.html'">Ep 24</button>
+        <button onclick="window.location.href='./jjk/jjks1.html'">Season 1</button>
+        <button onclick="window.location.href='./jjk/jjks2.html'">Season 2</button>
     </div>
 </body>
 </html>
