--- a/anime/Jujutsu Kaisen.html
+++ b/anime/Jujutsu Kaisen.html
@@ -53,8 +53,8 @@
     <p class="title"><strong>Jujutsu Kaisen</strong></p>
 
     <div class="button-container">
-        <button onclick="window.location.href='./jjk/jjks1.html'">Season 1</button>
-        <button onclick="window.location.href='./jjk/jjks2.html'">Season 2</button>
+        <button onclick="window.location.href='./jjks1.html'">Season 1</button>
+        <button onclick="window.location.href='./jjks2.html'">Season 2</button>
     </div>
 </body>
 </html>
