--- a/anime/Jujutsu Kaisen.html
+++ b/anime/Jujutsu Kaisen.html
@@ -55,6 +55,7 @@
     <div class="button-container">
         <button onclick="window.location.href='./jjks1.html'">Season 1</button>
         <button onclick="window.location.href='./jjks2.html'">Season 2</button>
+        <button onclick="window.location.href='./jjkmovie.html'">Movie 0</button>
     </div>
 </body>
 </html>
