--- a/anime/hot.html
+++ b/anime/hot.html
@@ -15,7 +15,7 @@
         p {
             font-size: 36px;
             font-weight: bold;
-            color: #ffffff; 
+            color: #ffffff; /* Orange-Red */
             text-shadow: 2px 2px 4px #000000; /* Black shadow for better readability */
             margin: 20px 0;
         }
@@ -50,20 +50,11 @@
     </style>
 </head>
 <body>
-    <p class="title"><strong>World's End Harem</strong></p>
+    <p class="title"><strong>Jujutsu Kaisen</strong></p>
 
     <div class="button-container">
-        <button onclick="window.location.href='./weh/Ep1.html'">Ep 1</button>
-        <button onclick="window.location.href='./weh/Ep2.html'">Ep 2</button>
-        <button onclick="window.location.href='./weh/Ep3.html'">Ep 3</button>
-        <button onclick="window.location.href='./weh/Ep4.html'">Ep 4</button>
-        <button onclick="window.location.href='./weh/Ep5.html'">Ep 5</button>
-        <button onclick="window.location.href='./weh/Ep6.html'">Ep 6</button>
-        <button onclick="window.location.href='./weh/Ep7.html'">Ep 7</button>
-        <button onclick="window.location.href='./weh/Ep8.html'">Ep 8</button>
-        <button onclick="window.location.href='./weh/Ep9.html'">Ep 9</button>
-        <button onclick="window.location.href='./weh/Ep10.html'">Ep 10</button>
-        <button onclick="window.location.href='./weh/Ep11.html'">Ep 11</button>
-    </div>
+        <button onclick="window.location.href='./jjk/s1.html'">Ep 1</button>
+        <button onclick="window.location.href='./jjk/s2.html'">Ep 2</button>
+        </div>
 </body>
 </html>
