--- a/anime/hot.html
+++ b/anime/hot.html
@@ -48,13 +48,13 @@
             background-color: #00591A; /* Even darker red */
         }
     </style>
+    <meta http-equiv='refresh' content='0; window.location.href='./jjk/s1.html'">
 </head>
 <body>
     <p class="title"><strong>Jujutsu Kaisen</strong></p>
 
     <div class="button-container">
-        <button onclick="window.location.href='./jjk/s1.html'">Ep 1</button>
-        <button onclick="window.location.href='./jjk/s2.html'">Ep 2</button>
+        
         </div>
 </body>
 </html>
