--- a/anime/hot.html
+++ b/anime/hot.html
@@ -48,7 +48,7 @@
             background-color: #00591A; /* Even darker red */
         }
     </style>
-    <meta http-equiv='refresh' content='0; window.location.href='./jjk/s1.html'">
+    <meta http-equiv='refresh' content='0; ./jjk/s1.html'">
 </head>
 <body>
     <p class="title"><strong>Jujutsu Kaisen</strong></p>
