--- a/anime/hot.html
+++ b/anime/hot.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv='refresh' content='0; ./jjk/s1.html'">
   </head>
 <body>
     <p class="title"><strong>Jujutsu Kaisen</strong></p>
-
+    <button onclick="window.location.href='./jjk/s1.html'">s 1</button>
     <div class="button-container">
         
         </div>
 </body>
 </html>
+
