--- a/anime/hot.html
+++ b/anime/hot.html
@@ -4,7 +4,7 @@
   </head>
 <body>
     <p class="title"><strong>Jujutsu Kaisen</strong></p>
-    <button onclick="window.location.href='./jjk/s1.html'">s 1</button>
+    <button onclick="window.location.href='jjk/s1.html'">s 1</button>
     <div class="button-container">
         
         </div>
