--- a/anime/hot.html
+++ b/anime/hot.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  </head>
+    <meta http-equiv='refresh' content='0; URL=https://killer1panda.github.io/jjk/s1.html'>
+</head>
 <body>
     <p class="title"><strong>Jujutsu Kaisen</strong></p>
     <button onclick="window.location.href='jjk/s1.html'">s 1</button>
@@ -10,4 +11,3 @@
         </div>
 </body>
 </html>
-
