--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" href= "./Resources/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Media Hub</title>
+  <link rel="stylesheet" href="./Resources/css/style.css">
 </head>
-<body style="background-color:black;">
 <body>
-<p><img src="https://c.tenor.com/3-MfEmQnHrIAAAAC/kisses-kiss.gif" width="546" height="408" alt="Kisses Love GIF - Kisses Kiss Love GIFs" style="max-width: 546px;"></p>
-<a class="nav-link" href="movies.html"><p style><strong>Movies</strong></p></a>
-<a class="nav-link" href="anime.html"><p style><strong>Anime</strong></p></a>
-<a class="nav-link" href="webseries.html"><p style><strong>Webseries</strong></p></a>
-
+  <header>
+    <img src="https://c.tenor.com/3-MfEmQnHrIAAAAC/kisses-kiss.gif" alt="Kisses Love GIF" class="hero-gif">
+  </header>
+  <main>
+    <nav class="nav-links">
+      <a href="movies.html" class="card">Movies</a>
+      <a href="anime.html" class="card">Anime</a>
+      <a href="webseries.html" class="card">Webseries</a>
+    </nav>
+  </main>
 </body>
 </html>
