--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <title>Media Hub</title>
   <link rel="stylesheet" href="./Resources/css/style.css">
 </head>
+  <script>
+  function toggleTheme() {
+    document.body.classList.toggle('light-theme');
+  }
+</script>
 <body>
+  <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
   <header>
     <img src="https://c.tenor.com/3-MfEmQnHrIAAAAC/kisses-kiss.gif" alt="Kisses Love GIF" class="hero-gif">
   </header>
