--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="movies.html" class="card">Movies</a>
       <a href="anime.html" class="card">Anime</a>
       <a href="webseries.html" class="card">Webseries</a>
+      <a href="demand.html" class="card">On demand</a>
     </nav>
   </main>
 </body>
